// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`media-type-tree ancestors should get ancestor items 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "flags": [],
        "hasChildren": true,
        "icon": "",
        "id": "00000000-0000-0000-0000-000000000000",
        "isDeletable": false,
        "isFolder": true,
        "name": "_Test Folder MediaType",
        "parent": null,
      },
      {
        "flags": [],
        "hasChildren": false,
        "icon": "",
        "id": "00000000-0000-0000-0000-000000000000",
        "isDeletable": false,
        "isFolder": false,
        "name": "_Test Child MediaType",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
      },
    ],
  },
}
`;

exports[`media-type-tree ancestors should handle non-existent item 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
  },
}
`;

exports[`media-type-tree children should get child items 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "flags": [],
        "hasChildren": false,
        "icon": "icon-folder",
        "id": "00000000-0000-0000-0000-000000000000",
        "isDeletable": true,
        "isFolder": false,
        "name": "_Test Child MediaType",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
      },
    ],
    "total": 1,
  },
}
`;

exports[`media-type-tree children should handle non-existent parent 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
    "total": 0,
  },
}
`;
